# bubbling_rainwater

./: .gitignore  Makefile  README.md  docker-compose.yml
src/java-src/: Dockerfile  pom.xml
src/java-src/src/main/java/bubbling_rainwater/dataplane/entry/: App.java
src/java-src/src/main/java/bubbling_rainwater/dataplane/network/: DelosFlight.java
src/java-src/src/main/java/bubbling_rainwater/dataplane/state_machine_replication/: LoggingPOStream.java  ReplicatingDelegateFileIO.java  ReplicatingFileIO.java
src/java-src/src/main/java/bubbling_rainwater/dataplane/wide_chain_ring/: HashPartition.java  LogicalNode.java  PhysicalNode.java  WideChainRing.java
src/java-src/src/main/proto/: DataplaneProtos.proto
src/java-src/src/test/java/bubbling_rainwater/dataplane/state_machine_replication/: ReplicatingCDCTest.java
src/java-src/src/test/java/bubbling_rainwater/dataplane/wide_chain_ring/: WideChainRingTest.java
src/quint-src/: ring_txns.qnt
src/rust-src/: Cargo.toml  Dockerfile
src/rust-src/src/: main.rs
