[package]
name = "bubbling_controlplane"
version = "0.1.0"
edition = "2021"
rust-version = "1.73"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = { version = "51.0.0", features=["ipc_compression"] }
arrow-flight = { version = "51.0.0", features = ["flight-sql-experimental"] }
arrow-schema = { version = "51.0.0", default-features = false }
configure_me = { version = "0.4.0" }
configure_me_codegen = { version = "0.4.4" }
datafusion = "37.0.0"
datafusion-cli = "37.0.0"
datafusion-proto = "37.0.0"
object_store = "0.9.0"
sqlparser = "0.44.0"
tonic = { version = "0.11" }
tonic-build = { version = "0.11", default-features = false, features = [
    "transport",
    "prost"
] }
tracing = "0.1.36"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }

omnipaxos = { version = "0.2.2", features = ["default", "logging", "toml_config", "unicache"] }
opendal = "0.48.0"
futures = "0.3"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["std"] }
structopt = { version = "0.3", default-features = false }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
